--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "275f997b",
+   "id": "73b3609a",
    "metadata": {},
    "source": [
     "# Clean and Analyze Employee Exit Surveys\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a8d438",
+   "id": "a6b4f686",
    "metadata": {},
    "source": [
     "## Exploring the surveys\n",
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a4d2e764",
+   "execution_count": 1,
+   "id": "b9a9ebb9",
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "737235c6",
+   "execution_count": 2,
+   "id": "1ba36012",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,8 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "9948b5d6",
+   "execution_count": 3,
+   "id": "6af5c2d8",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "Name: SeparationType, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8284978a",
+   "execution_count": 4,
+   "id": "239aea52",
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +396,8 @@
        "2013          200\n",
        "01/2014        43\n",
        "12/2013        40\n",
-       "09/2013        34\n",
        "Not Stated     34\n",
+       "09/2013        34\n",
        "06/2013        27\n",
        "07/2013        22\n",
        "10/2013        20\n",
@@ -405,22 +405,22 @@
        "08/2013        12\n",
        "05/2013         7\n",
        "05/2012         6\n",
+       "02/2014         2\n",
        "04/2013         2\n",
+       "04/2014         2\n",
        "08/2012         2\n",
        "07/2014         2\n",
-       "04/2014         2\n",
-       "02/2014         2\n",
        "09/2010         1\n",
        "07/2006         1\n",
-       "2010            1\n",
-       "09/2014         1\n",
-       "07/2012         1\n",
-       "2014            1\n",
        "11/2012         1\n",
+       "09/2014         1\n",
+       "2014            1\n",
+       "2010            1\n",
+       "07/2012         1\n",
        "Name: Cease Date, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "7a1520ce",
+   "execution_count": 5,
+   "id": "6e094894",
    "metadata": {},
    "outputs": [
     {
@@ -442,49 +442,49 @@
        "2011          40\n",
        "2007          34\n",
        "2008          31\n",
-       "2010          27\n",
        "2012          27\n",
+       "2010          27\n",
        "2009          24\n",
        "2006          23\n",
        "2013          21\n",
-       "1975          21\n",
        "1970          21\n",
-       "1990          20\n",
+       "1975          21\n",
        "2005          20\n",
+       "1990          20\n",
        "1996          19\n",
        "1999          19\n",
-       "2004          18\n",
-       "1992          18\n",
-       "1991          18\n",
        "2000          18\n",
+       "1992          18\n",
+       "2004          18\n",
+       "1991          18\n",
        "1989          17\n",
-       "1978          15\n",
        "2002          15\n",
-       "2003          15\n",
-       "1976          15\n",
+       "1978          15\n",
        "1988          15\n",
+       "1976          15\n",
+       "2003          15\n",
+       "1979          14\n",
+       "1998          14\n",
+       "1997          14\n",
        "1980          14\n",
        "1974          14\n",
-       "1998          14\n",
-       "1979          14\n",
        "1995          14\n",
-       "1997          14\n",
        "1993          13\n",
-       "1986          12\n",
        "1972          12\n",
+       "1986          12\n",
        "1977          11\n",
-       "1994          10\n",
        "1984          10\n",
+       "1994          10\n",
        "1971          10\n",
        "2001          10\n",
        "1969          10\n",
-       "1983           9\n",
        "1981           9\n",
+       "1983           9\n",
        "1985           8\n",
        "1973           8\n",
        "1987           7\n",
-       "1963           4\n",
        "1982           4\n",
+       "1963           4\n",
        "1968           3\n",
        "1967           2\n",
        "1965           1\n",
@@ -492,7 +492,7 @@
        "Name: DETE Start Date, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ceb92c",
+   "id": "dc8fb9c1",
    "metadata": {},
    "source": [
     "From the DETE survey, we observe the following:\n",
@@ -514,8 +514,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "562ffbe1",
+   "execution_count": 6,
+   "id": "d8c0b207",
    "metadata": {},
    "outputs": [
     {
@@ -610,8 +610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "1edd7f89",
+   "execution_count": 7,
+   "id": "68611d60",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "[5 rows x 72 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,8 +904,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "c835b0b4",
+   "execution_count": 8,
+   "id": "fbdef4b9",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "Name: Reason for ceasing employment, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,8 +932,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "559d64d6",
+   "execution_count": 9,
+   "id": "bc8d80e4",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "Name: LengthofServiceOverall. Overall Length of Service at Institute (in years), dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,12 +961,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb5cf03",
+   "id": "48af06d1",
    "metadata": {},
    "source": [
+    "From the TAFE survey, we observe the following:\n",
     "- `Reason for ceasing employment`: Clear descriptions. There are one missing values.\n",
-    " \n",
-    "- `LengthofServiceOverall. Overall Length of Service at Institute (in years)`:"
+    "- `LengthofServiceOverall. Overall Length of Service at Institute (in years)`: We observe the format of the dates are apparently ranges of years and `More than 20 years` value.There are 106 missing values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78834769",
+   "metadata": {},
+   "source": [
+    "## Identify Missing Values and Drop Unnecessary Columns\n",
+    "\n",
+    "We have observed that the value `Not Stated` is used to represent missing values, we are going to read DETE CSV file again, we will use the `na_values` parameter with `Not Stated` value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b5273eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_survery = pd.read_csv('dete_survey.csv', na_values='Not Stated')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36efe67d",
+   "metadata": {},
+   "source": [
+    "Both the dete_survey and tafe_survey dataframes contain many columns that we don't need to complete our analysis. \n",
+    "We'll use the pd."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cc0591b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_survey_updated = dete_survey.drop(dete_survey.columns[28:49], axis=1)\n",
+    "tafe_survey_updated = tafe_survey.drop(tafe_survey.columns[17:66], axis=1)"
    ]
   }
  ],
